main.css
.body {
  padding-top: 0;
  padding-bottom: 0;
  font-family: 'Lato', sans-serif;
  background: url(images/background.png) no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

p, span, li {
  color: #111010;
}

.main {
  min-height: 1000px;
  position: relative;
}

.jumbotron {
  width: 100%;
  text-align: center;
  height: 600px;
}

.info-card {
  background-color: #fff;
  text-indent: 20px;
  position: relative;
}

.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
  background-color: #fff;
  border-radius: 0;
  border-bottom: 1px solid #D227E1;
}

.nav-pills .nav-link {
  border: 1px solid #fff;
  border-radius: 0;
}

.info-card .nav {
  justify-content: center;
}

@media (max-width: 768px) {
  .info-card {
    width: 100%;
  }
}

.navbar-dark .navbar-nav {
  width: 35%;
  justify-content: flex-end;
}

.site-menu-line {
  opacity: 1;
  width: 37%;
  background-color: #fff;
  position: absolute;
  left: -16px;
  bottom: -10px;
}

.navbar-dark .navbar-nav .nav-link {
  color: #fff;
  padding-right: 24px;
}

.navbar-dark .navbar-nav .nav-link.active {
  color: #D227E1;
}

.bg-dark {
  background-color: #111010!important;
}

.navbar {
  height: 120px;
}

.nav-link {
  font-weight: 300;
  font-size: 22px;
}

@media (max-width: 768px) {
  .nav-link {
    font-size: 20px;
  }
}

.site-title {
  color: #fff;
  font-weight: 100;
  font-size: 36px;
  position: absolute;
  right: 0;
  z-index: 1031;
  top: 28px;
  margin-right: 16px;
  line-height: 16px;
  text-align: right;
}

.site-title .site-title-line {
  color: #D227E1;
  height: 1px;
  width: 500px;
  margin-right: -16px;
  margin-bottom: 14px;
  opacity: 1;
}

@media (max-width: 768px) {
  .site-title {
    font-size: 24px;
    top: 32px;
    margin-right: 16px;
    line-height: 12px;
  }

  .site-title .site-title-line {
    color: #D227E1;
    width: 280px;
  }
}

.navbar-dark .navbar-toggler {
  border-radius: 0;
  border: 1px solid #fff;
  position: absolute;
}

.navbar-dark .navbar-toggler:focus {
  box-shadow: none;
  border: 1px solid #D227E1;
}

.navbar-collapse {
  position: relative;
  z-index: 2;
}

@media (max-width: 768px) {
  .navbar-collapse.show {
    position: absolute;
    top: 100px;
    background-color: #111010;
    padding: 8px;
    padding-left: 16px;
    width: 136px;
    height: 210px;
    overflow: auto;
  }
}

.navbar-collapse.collapsing {
  transition: none;
  display: none;
}

@media (max-width: 768px) {
  .site-menu-line {
    display: none;
  }
}

.site-footer {
  height: 80px;
  text-align: right;
  position: relative;
}

.site-footer-copyright {
  display: inline-block;
  color: #fff;
  font-weight: 300;
  position: absolute;
  right: 8px;
  top: 24px;
}

.site-footer-line {
  opacity: 1;
  width: 20%;
  background-color: #D227E1;
  position: absolute;
  right: 0;
  top: 34px;
}

.image-blured {
  opacity: 0.15;
}

.carousel {
  background-color: #F4F2F4;
  position: relative;
}

.carousel .container {
  position: relative;
}

.carousel .gallery-heading {
  position: absolute;
  margin: 0;
  padding-left: 32px;
  padding-right: 16px;
  padding-bottom: 2px;
  padding-top: 2px;
  left: 0;
  top: 0;
  font-weight: 100;
  font-size: 40px;
  background-color: #D227E1;
  color: #fff;
  opacity: 0.7;
}

@media (max-width: 990px) {
  .carousel .gallery-heading {
    padding-left: 32px;
    padding-right: 16px;
    padding-bottom: 2px;
    padding-top: 2px;
    left: 0;
    top: 0;
    font-weight: 100;
    font-size: 32px;
    opacity: 0.7;
  }
}

@media (max-width: 768px) {
  .carousel .gallery-heading {
    padding-left: 32px;
    padding-right: 16px;
    padding-bottom: 2px;
    padding-top: 2px;
    left: 0;
    top: 0;
    font-weight: 100;
    font-size: 24px;
    opacity: 0.7;
  }
}

.carousel .carousel-control-prev, .carousel-control-next {
  width: 44px;
}

.carousel-item {
  height: 38rem;
}

.carousel-item .img-fluid {
  height: 38rem;
}

@media (max-width: 990px) {
  .carousel-item {
    height: 26rem;
  }

  .carousel-item .img-fluid {
    height: 26rem;
  }
}

@media (max-width: 768px) {
  .carousel-item {
    height: 19rem;
  }

  .carousel-item .img-fluid {
    height: 19rem;
  }
}

.carousel-indicators [data-bs-target] {
  background-color: #111010;
}

.carousel-indicators .active {
  background-color: #D227E1;
}

.link {
  color: #D227E1;
  text-decoration: none;
  display: inline-block;
  text-indent: 0;
}

.link:hover {
  text-decoration: underline;
  color: #771880;
}

.link:active {
  text-decoration: underline;
  color: #771880;
}

.contact-heading {
  position: absolute;
  margin: 0;
  padding-left: 0px;
  padding-right: 32px;
  padding-bottom: 6px;
  padding-top: 2px;
  right: 0;
  top: 0;
  font-weight: 100;
  font-size: 32px;
  background-color: #D227E1;
  color: #fff;
  opacity: 0.7;
}

